// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`O44 — таблиця класу в конструкторі до виносу в спільний компонент > ARTIFICER_2014: заголовки й клітинки 1`] = `
[
  [
    "Рівень",
    "Бонус майстерності",
    "Фічі",
    "Знані вливання",
    "Вливання в предмети",
    "К-сть знаних замовлянь",
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
  ],
  [
    "1",
    "+2",
    "Магічне майстрування, Чаротворення (Винахідник)",
    "—",
    "—",
    "2",
    "2",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "2",
    "+2",
    "Вливання предмета",
    "4",
    "2",
    "2",
    "2",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "3",
    "+2",
    "Потрібний інструмент для роботи, Спеціалізація Винахідника, Фіча підкласу",
    "4",
    "2",
    "2",
    "3",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "4",
    "+2",
    "Покращення Характеристик",
    "4",
    "2",
    "2",
    "3",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "5",
    "+3",
    "Фіча підкласу",
    "4",
    "2",
    "2",
    "4",
    "2",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "6",
    "+3",
    "Експертиза інструментів",
    "6",
    "3",
    "2",
    "4",
    "2",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "7",
    "+3",
    "Спалах геніальності",
    "6",
    "3",
    "2",
    "4",
    "3",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "8",
    "+3",
    "—",
    "6",
    "3",
    "2",
    "4",
    "3",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "9",
    "+4",
    "Фіча підкласу",
    "6",
    "3",
    "2",
    "4",
    "3",
    "2",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "10",
    "+4",
    "Адепт магічних предметів",
    "8",
    "4",
    "3",
    "4",
    "3",
    "2",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "11",
    "+4",
    "Предмет-осередок заклять",
    "8",
    "4",
    "3",
    "4",
    "3",
    "3",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "12",
    "+4",
    "—",
    "8",
    "4",
    "3",
    "4",
    "3",
    "3",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "13",
    "+5",
    "—",
    "8",
    "4",
    "3",
    "4",
    "3",
    "3",
    "1",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "14",
    "+5",
    "Знавець магічних предметів",
    "10",
    "5",
    "4",
    "4",
    "3",
    "3",
    "1",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "15",
    "+5",
    "Фіча підкласу",
    "10",
    "5",
    "4",
    "4",
    "3",
    "3",
    "2",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "16",
    "+5",
    "—",
    "10",
    "5",
    "4",
    "4",
    "3",
    "3",
    "2",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "17",
    "+6",
    "—",
    "10",
    "5",
    "4",
    "4",
    "3",
    "3",
    "3",
    "1",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "18",
    "+6",
    "Майстер магічних предметів",
    "12",
    "6",
    "4",
    "4",
    "3",
    "3",
    "3",
    "1",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "19",
    "+6",
    "—",
    "12",
    "6",
    "4",
    "4",
    "3",
    "3",
    "3",
    "2",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "20",
    "+6",
    "Душа винахідництва",
    "12",
    "6",
    "4",
    "4",
    "3",
    "3",
    "3",
    "2",
    "-",
    "-",
    "-",
    "-",
  ],
]
`;

exports[`O44 — таблиця класу в конструкторі до виносу в спільний компонент > BARBARIAN_2014: заголовки й клітинки 1`] = `
[
  [
    "Рівень",
    "Бонус майстерності",
    "Фічі",
    "Шкода люті",
    "Лють",
  ],
  [
    "1",
    "+2",
    "Лють, Захист без броні, Захист без обладунків",
    "+2",
    "2",
  ],
  [
    "2",
    "+2",
    "Безрозсудна атака, Відчуття небезпеки",
    "+2",
    "2",
  ],
  [
    "3",
    "+2",
    "Первісний Шлях, Фіча підкласу",
    "+2",
    "3",
  ],
  [
    "4",
    "+2",
    "Покращення Характеристик",
    "+2",
    "3",
  ],
  [
    "5",
    "+3",
    "Додаткова атака, Швидкий рух",
    "+2",
    "3",
  ],
  [
    "6",
    "+3",
    "Фіча підкласу",
    "+2",
    "4",
  ],
  [
    "7",
    "+3",
    "Дикий інстинкт",
    "+2",
    "4",
  ],
  [
    "8",
    "+3",
    "—",
    "+2",
    "4",
  ],
  [
    "9",
    "+4",
    "Брутальний крит",
    "+3",
    "4",
  ],
  [
    "10",
    "+4",
    "Фіча підкласу",
    "+3",
    "4",
  ],
  [
    "11",
    "+4",
    "Невпинна лють",
    "+3",
    "4",
  ],
  [
    "12",
    "+4",
    "—",
    "+3",
    "5",
  ],
  [
    "13",
    "+5",
    "—",
    "+3",
    "5",
  ],
  [
    "14",
    "+5",
    "Фіча підкласу",
    "+3",
    "5",
  ],
  [
    "15",
    "+5",
    "Постійна лють",
    "+3",
    "5",
  ],
  [
    "16",
    "+5",
    "—",
    "+4",
    "5",
  ],
  [
    "17",
    "+6",
    "—",
    "+4",
    "6",
  ],
  [
    "18",
    "+6",
    "Незламна міць",
    "+4",
    "6",
  ],
  [
    "19",
    "+6",
    "—",
    "+4",
    "6",
  ],
  [
    "20",
    "+6",
    "Первісний чемпіон",
    "+4",
    "—",
  ],
]
`;

exports[`O44 — таблиця класу в конструкторі до виносу в спільний компонент > BARD_2014: заголовки й клітинки 1`] = `
[
  [
    "Рівень",
    "Бонус майстерності",
    "Фічі",
    "Кістка натхнення",
    "Бардське натхнення",
    "К-сть знаних замовлянь",
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
  ],
  [
    "1",
    "+2",
    "Чаротворство (Бард), Бардське натхнення",
    "к6",
    "0 + мод. ХАР",
    "2",
    "2",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "2",
    "+2",
    "Майстер на всі руки, Пісня відпочинку",
    "к6",
    "0 + мод. ХАР",
    "2",
    "3",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "3",
    "+2",
    "Експертиза (Бард), Колегія Бардів, Фіча підкласу",
    "к6",
    "0 + мод. ХАР",
    "2",
    "4",
    "2",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "4",
    "+2",
    "Покращення Характеристик",
    "к6",
    "0 + мод. ХАР",
    "3",
    "4",
    "3",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "5",
    "+3",
    "Джерело натхнення",
    "к8",
    "0 + мод. ХАР",
    "3",
    "4",
    "3",
    "2",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "6",
    "+3",
    "Контрчари, Фіча підкласу",
    "к8",
    "0 + мод. ХАР",
    "3",
    "4",
    "3",
    "3",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "7",
    "+3",
    "—",
    "к8",
    "0 + мод. ХАР",
    "3",
    "4",
    "3",
    "3",
    "1",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "8",
    "+3",
    "—",
    "к8",
    "0 + мод. ХАР",
    "3",
    "4",
    "3",
    "3",
    "2",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "9",
    "+4",
    "—",
    "к8",
    "0 + мод. ХАР",
    "3",
    "4",
    "3",
    "3",
    "3",
    "1",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "10",
    "+4",
    "Магічні таємниці, Експертиза (Бард) 2",
    "к10",
    "0 + мод. ХАР",
    "4",
    "4",
    "3",
    "3",
    "3",
    "2",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "11",
    "+4",
    "—",
    "к10",
    "0 + мод. ХАР",
    "4",
    "4",
    "3",
    "3",
    "3",
    "2",
    "1",
    "-",
    "-",
    "-",
  ],
  [
    "12",
    "+4",
    "—",
    "к10",
    "0 + мод. ХАР",
    "4",
    "4",
    "3",
    "3",
    "3",
    "2",
    "1",
    "-",
    "-",
    "-",
  ],
  [
    "13",
    "+5",
    "—",
    "к10",
    "0 + мод. ХАР",
    "4",
    "4",
    "3",
    "3",
    "3",
    "2",
    "1",
    "1",
    "-",
    "-",
  ],
  [
    "14",
    "+5",
    "Фіча підкласу",
    "к10",
    "0 + мод. ХАР",
    "4",
    "4",
    "3",
    "3",
    "3",
    "2",
    "1",
    "1",
    "-",
    "-",
  ],
  [
    "15",
    "+5",
    "—",
    "к12",
    "0 + мод. ХАР",
    "4",
    "4",
    "3",
    "3",
    "3",
    "2",
    "1",
    "1",
    "1",
    "-",
  ],
  [
    "16",
    "+5",
    "—",
    "к12",
    "0 + мод. ХАР",
    "4",
    "4",
    "3",
    "3",
    "3",
    "2",
    "1",
    "1",
    "1",
    "-",
  ],
  [
    "17",
    "+6",
    "—",
    "к12",
    "0 + мод. ХАР",
    "4",
    "4",
    "3",
    "3",
    "3",
    "2",
    "1",
    "1",
    "1",
    "1",
  ],
  [
    "18",
    "+6",
    "—",
    "к12",
    "0 + мод. ХАР",
    "4",
    "4",
    "3",
    "3",
    "3",
    "3",
    "1",
    "1",
    "1",
    "1",
  ],
  [
    "19",
    "+6",
    "—",
    "к12",
    "0 + мод. ХАР",
    "4",
    "4",
    "3",
    "3",
    "3",
    "3",
    "2",
    "1",
    "1",
    "1",
  ],
  [
    "20",
    "+6",
    "Вище натхнення",
    "к12",
    "0 + мод. ХАР",
    "4",
    "4",
    "3",
    "3",
    "3",
    "3",
    "2",
    "2",
    "1",
    "1",
  ],
]
`;

exports[`O44 — таблиця класу в конструкторі до виносу в спільний компонент > BARD_2024: заголовки й клітинки 1`] = `
[
  [
    "Рівень",
    "Бонус майстерності",
    "Фічі",
    "Бардське натхнення",
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
  ],
  [
    "1",
    "+2",
    "Бардське натхнення, Чаклування",
    "0 + мод. ХАР",
    "2",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "2",
    "+2",
    "Експертиза, Майстер на всі руки",
    "0 + мод. ХАР",
    "3",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "3",
    "+2",
    "Підклас Барда, Фіча підкласу",
    "0 + мод. ХАР",
    "4",
    "2",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "4",
    "+2",
    "Покращення Характеристик",
    "0 + мод. ХАР",
    "4",
    "3",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "5",
    "+3",
    "Джерело натхнення",
    "0 + мод. ХАР",
    "4",
    "3",
    "2",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "6",
    "+3",
    "Фіча підкласу",
    "0 + мод. ХАР",
    "4",
    "3",
    "3",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "7",
    "+3",
    "Контрчари",
    "0 + мод. ХАР",
    "4",
    "3",
    "3",
    "1",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "8",
    "+3",
    "—",
    "0 + мод. ХАР",
    "4",
    "3",
    "3",
    "2",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "9",
    "+4",
    "Експертиза",
    "0 + мод. ХАР",
    "4",
    "3",
    "3",
    "3",
    "1",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "10",
    "+4",
    "Магічні таємниці",
    "0 + мод. ХАР",
    "4",
    "3",
    "3",
    "3",
    "2",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "11",
    "+4",
    "—",
    "0 + мод. ХАР",
    "4",
    "3",
    "3",
    "3",
    "2",
    "1",
    "-",
    "-",
    "-",
  ],
  [
    "12",
    "+4",
    "—",
    "0 + мод. ХАР",
    "4",
    "3",
    "3",
    "3",
    "2",
    "1",
    "-",
    "-",
    "-",
  ],
  [
    "13",
    "+5",
    "—",
    "0 + мод. ХАР",
    "4",
    "3",
    "3",
    "3",
    "2",
    "1",
    "1",
    "-",
    "-",
  ],
  [
    "14",
    "+5",
    "Фіча підкласу",
    "0 + мод. ХАР",
    "4",
    "3",
    "3",
    "3",
    "2",
    "1",
    "1",
    "-",
    "-",
  ],
  [
    "15",
    "+5",
    "—",
    "0 + мод. ХАР",
    "4",
    "3",
    "3",
    "3",
    "2",
    "1",
    "1",
    "1",
    "-",
  ],
  [
    "16",
    "+5",
    "—",
    "0 + мод. ХАР",
    "4",
    "3",
    "3",
    "3",
    "2",
    "1",
    "1",
    "1",
    "-",
  ],
  [
    "17",
    "+6",
    "—",
    "0 + мод. ХАР",
    "4",
    "3",
    "3",
    "3",
    "2",
    "1",
    "1",
    "1",
    "1",
  ],
  [
    "18",
    "+6",
    "Вище натхнення",
    "0 + мод. ХАР",
    "4",
    "3",
    "3",
    "3",
    "3",
    "1",
    "1",
    "1",
    "1",
  ],
  [
    "19",
    "+6",
    "Епічний Дар",
    "0 + мод. ХАР",
    "4",
    "3",
    "3",
    "3",
    "3",
    "2",
    "1",
    "1",
    "1",
  ],
  [
    "20",
    "+6",
    "Слова Творіння",
    "0 + мод. ХАР",
    "4",
    "3",
    "3",
    "3",
    "3",
    "2",
    "2",
    "1",
    "1",
  ],
]
`;

exports[`O44 — таблиця класу в конструкторі до виносу в спільний компонент > FIGHTER_2014: заголовки й клітинки 1`] = `
[
  [
    "Рівень",
    "Бонус майстерності",
    "Фічі",
  ],
  [
    "1",
    "+2",
    "Друге дихання, Бойовий Стиль",
  ],
  [
    "2",
    "+2",
    "Сплеск дій",
  ],
  [
    "3",
    "+2",
    "Військовий Архетип, Фіча підкласу",
  ],
  [
    "4",
    "+2",
    "Покращення Характеристик",
  ],
  [
    "5",
    "+3",
    "Додаткова атака",
  ],
  [
    "6",
    "+3",
    "—",
  ],
  [
    "7",
    "+3",
    "Фіча підкласу",
  ],
  [
    "8",
    "+3",
    "—",
  ],
  [
    "9",
    "+4",
    "Непохитність",
  ],
  [
    "10",
    "+4",
    "Фіча підкласу",
  ],
  [
    "11",
    "+4",
    "—",
  ],
  [
    "12",
    "+4",
    "—",
  ],
  [
    "13",
    "+5",
    "—",
  ],
  [
    "14",
    "+5",
    "—",
  ],
  [
    "15",
    "+5",
    "Фіча підкласу",
  ],
  [
    "16",
    "+5",
    "—",
  ],
  [
    "17",
    "+6",
    "—",
  ],
  [
    "18",
    "+6",
    "Фіча підкласу",
  ],
  [
    "19",
    "+6",
    "—",
  ],
  [
    "20",
    "+6",
    "—",
  ],
]
`;

exports[`O44 — таблиця класу в конструкторі до виносу в спільний компонент > MONK_2014: заголовки й клітинки 1`] = `
[
  [
    "Рівень",
    "Бонус майстерності",
    "Фічі",
    "Кі",
  ],
  [
    "1",
    "+2",
    "Захист без обладунків, Бойові мистецтва",
    "—",
  ],
  [
    "2",
    "+2",
    "Кі, Рух без броні, Шквал ударів, Терплячий захист, Крок вітру",
    "2",
  ],
  [
    "3",
    "+2",
    "Відхилення снарядів, Монастирська Традиція, Фіча підкласу",
    "3",
  ],
  [
    "4",
    "+2",
    "Повільне падіння, Покращення Характеристик",
    "4",
  ],
  [
    "5",
    "+3",
    "Додаткова атака, Приголомшливий удар",
    "5",
  ],
  [
    "6",
    "+3",
    "Удари, посилені Кі, Фіча підкласу",
    "6",
  ],
  [
    "7",
    "+3",
    "Ухилення, Спокій розуму",
    "7",
  ],
  [
    "8",
    "+3",
    "—",
    "8",
  ],
  [
    "9",
    "+4",
    "Неозброєний рух (вертикальний)",
    "9",
  ],
  [
    "10",
    "+4",
    "Чистота тіла",
    "10",
  ],
  [
    "11",
    "+4",
    "Фіча підкласу",
    "11",
  ],
  [
    "12",
    "+4",
    "—",
    "12",
  ],
  [
    "13",
    "+5",
    "Язик Сонця і Місяця",
    "13",
  ],
  [
    "14",
    "+5",
    "Алмазна душа",
    "14",
  ],
  [
    "15",
    "+5",
    "Невмируще тіло",
    "15",
  ],
  [
    "16",
    "+5",
    "—",
    "16",
  ],
  [
    "17",
    "+6",
    "Фіча підкласу",
    "17",
  ],
  [
    "18",
    "+6",
    "Порожнє тіло, Астральна проєкція (Порожнє тіло)",
    "18",
  ],
  [
    "19",
    "+6",
    "—",
    "19",
  ],
  [
    "20",
    "+6",
    "Досконале Я",
    "20",
  ],
]
`;

exports[`O44 — таблиця класу в конструкторі до виносу в спільний компонент > MONK_2024: заголовки й клітинки 1`] = `
[
  [
    "Рівень",
    "Бонус майстерності",
    "Фічі",
    "Зосередження Монаха",
    "Надприродний метаболізм",
  ],
  [
    "1",
    "+2",
    "Бойові мистецтва, Захист без броні",
    "—",
    "—",
  ],
  [
    "2",
    "+2",
    "Зосередження Монаха, Рух без броні, Надприродний метаболізм",
    "2",
    "1",
  ],
  [
    "3",
    "+2",
    "Відхилення атак, Підклас Монаха, Фіча підкласу",
    "3",
    "1",
  ],
  [
    "4",
    "+2",
    "Покращення Характеристик, Повільне падіння",
    "4",
    "1",
  ],
  [
    "5",
    "+3",
    "Додаткова атака, Приголомшливий удар",
    "5",
    "1",
  ],
  [
    "6",
    "+3",
    "Підсилені удари, Фіча підкласу",
    "6",
    "1",
  ],
  [
    "7",
    "+3",
    "Ухилення",
    "7",
    "1",
  ],
  [
    "8",
    "+3",
    "—",
    "8",
    "1",
  ],
  [
    "9",
    "+4",
    "Акробатичний рух",
    "9",
    "1",
  ],
  [
    "10",
    "+4",
    "Підвищене зосередження, Самовідновлення",
    "10",
    "1",
  ],
  [
    "11",
    "+4",
    "Фіча підкласу",
    "11",
    "1",
  ],
  [
    "12",
    "+4",
    "—",
    "12",
    "1",
  ],
  [
    "13",
    "+5",
    "Відхилення енергії",
    "13",
    "1",
  ],
  [
    "14",
    "+5",
    "Загартований дисципліною",
    "14",
    "1",
  ],
  [
    "15",
    "+5",
    "Досконале зосередження",
    "15",
    "1",
  ],
  [
    "16",
    "+5",
    "—",
    "16",
    "1",
  ],
  [
    "17",
    "+6",
    "Фіча підкласу",
    "17",
    "1",
  ],
  [
    "18",
    "+6",
    "Вищий захист",
    "18",
    "1",
  ],
  [
    "19",
    "+6",
    "Епічний Дар",
    "19",
    "1",
  ],
  [
    "20",
    "+6",
    "Тіло і розум",
    "20",
    "1",
  ],
]
`;

exports[`O44 — таблиця класу в конструкторі до виносу в спільний компонент > PALADIN_2024: заголовки й клітинки 1`] = `
[
  [
    "Рівень",
    "Бонус майстерності",
    "Фічі",
    "Цілющі руки",
    "Кара Паладина",
    "Канал божественності",
    "Вірний скакун",
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
  ],
  [
    "1",
    "+2",
    "Цілющі руки, Чаклування, Майстерність зброї",
    "5",
    "—",
    "—",
    "—",
    "2",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "2",
    "+2",
    "Бойовий стиль, Кара Паладина",
    "10",
    "1",
    "—",
    "—",
    "2",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "3",
    "+2",
    "Канал божественності, Підклас Паладина, Фіча підкласу",
    "15",
    "1",
    "2",
    "—",
    "3",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "4",
    "+2",
    "Покращення Характеристик",
    "20",
    "1",
    "2",
    "—",
    "3",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "5",
    "+3",
    "Додаткова атака, Вірний скакун",
    "25",
    "1",
    "2",
    "1",
    "4",
    "2",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "6",
    "+3",
    "Аура захисту",
    "30",
    "1",
    "2",
    "1",
    "4",
    "2",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "7",
    "+3",
    "Фіча підкласу",
    "35",
    "1",
    "2",
    "1",
    "4",
    "3",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "8",
    "+3",
    "—",
    "40",
    "1",
    "2",
    "1",
    "4",
    "3",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "9",
    "+4",
    "Відлякування ворогів",
    "45",
    "1",
    "2",
    "1",
    "4",
    "3",
    "2",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "10",
    "+4",
    "Аура мужності",
    "50",
    "1",
    "2",
    "1",
    "4",
    "3",
    "2",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "11",
    "+4",
    "Променеві удари",
    "55",
    "1",
    "3",
    "1",
    "4",
    "3",
    "3",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "12",
    "+4",
    "—",
    "60",
    "1",
    "3",
    "1",
    "4",
    "3",
    "3",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "13",
    "+5",
    "—",
    "65",
    "1",
    "3",
    "1",
    "4",
    "3",
    "3",
    "1",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "14",
    "+5",
    "Відновлювальний дотик",
    "70",
    "1",
    "3",
    "1",
    "4",
    "3",
    "3",
    "1",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "15",
    "+5",
    "Фіча підкласу",
    "75",
    "1",
    "3",
    "1",
    "4",
    "3",
    "3",
    "2",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "16",
    "+5",
    "—",
    "80",
    "1",
    "3",
    "1",
    "4",
    "3",
    "3",
    "2",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "17",
    "+6",
    "—",
    "85",
    "1",
    "3",
    "1",
    "4",
    "3",
    "3",
    "3",
    "1",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "18",
    "+6",
    "Розширення аури",
    "90",
    "1",
    "3",
    "1",
    "4",
    "3",
    "3",
    "3",
    "1",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "19",
    "+6",
    "Епічний Дар",
    "95",
    "1",
    "3",
    "1",
    "4",
    "3",
    "3",
    "3",
    "2",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "20",
    "+6",
    "Фіча підкласу",
    "100",
    "1",
    "3",
    "1",
    "4",
    "3",
    "3",
    "3",
    "2",
    "-",
    "-",
    "-",
    "-",
  ],
]
`;

exports[`O44 — таблиця класу в конструкторі до виносу в спільний компонент > ROGUE_2014: заголовки й клітинки 1`] = `
[
  [
    "Рівень",
    "Бонус майстерності",
    "Фічі",
    "Підступна атака",
  ],
  [
    "1",
    "+2",
    "Експертиза, Підступна атака, Злодійська мова",
    "1к6",
  ],
  [
    "2",
    "+2",
    "Хитра дія",
    "1к6",
  ],
  [
    "3",
    "+2",
    "Пройдисвітський архетип, Фіча підкласу",
    "2к6",
  ],
  [
    "4",
    "+2",
    "Покращення Характеристик",
    "2к6",
  ],
  [
    "5",
    "+3",
    "Надприродне ухилення",
    "3к6",
  ],
  [
    "6",
    "+3",
    "Експертиза 2",
    "3к6",
  ],
  [
    "7",
    "+3",
    "Ухилення",
    "4к6",
  ],
  [
    "8",
    "+3",
    "—",
    "4к6",
  ],
  [
    "9",
    "+4",
    "Фіча підкласу",
    "5к6",
  ],
  [
    "10",
    "+4",
    "—",
    "5к6",
  ],
  [
    "11",
    "+4",
    "Надійний талант",
    "6к6",
  ],
  [
    "12",
    "+4",
    "—",
    "6к6",
  ],
  [
    "13",
    "+5",
    "Фіча підкласу",
    "7к6",
  ],
  [
    "14",
    "+5",
    "Сліповідчуття",
    "7к6",
  ],
  [
    "15",
    "+5",
    "Слизький розум",
    "8к6",
  ],
  [
    "16",
    "+5",
    "—",
    "8к6",
  ],
  [
    "17",
    "+6",
    "Фіча підкласу",
    "9к6",
  ],
  [
    "18",
    "+6",
    "Невловимий",
    "9к6",
  ],
  [
    "19",
    "+6",
    "—",
    "10к6",
  ],
  [
    "20",
    "+6",
    "Шанс удачі",
    "10к6",
  ],
]
`;

exports[`O44 — таблиця класу в конструкторі до виносу в спільний компонент > WARLOCK_2014: заголовки й клітинки 1`] = `
[
  [
    "Рівень",
    "Бонус майстерності",
    "Фічі",
    "Знані інвокації",
    "К-сть знаних замовлянь",
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
  ],
  [
    "1",
    "+2",
    "Магія пакту, Фіча підкласу",
    "—",
    "2",
    "1",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "2",
    "+2",
    "Потойбічні виклики",
    "2",
    "2",
    "2",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "3",
    "+2",
    "Дар пакту",
    "2",
    "2",
    "-",
    "2",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "4",
    "+2",
    "—",
    "2",
    "3",
    "-",
    "2",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "5",
    "+3",
    "—",
    "3",
    "3",
    "-",
    "-",
    "2",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "6",
    "+3",
    "Фіча підкласу",
    "3",
    "3",
    "-",
    "-",
    "2",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "7",
    "+3",
    "—",
    "4",
    "3",
    "-",
    "-",
    "-",
    "2",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "8",
    "+3",
    "—",
    "4",
    "3",
    "-",
    "-",
    "-",
    "2",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "9",
    "+4",
    "—",
    "5",
    "3",
    "-",
    "-",
    "-",
    "-",
    "2",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "10",
    "+4",
    "Фіча підкласу",
    "5",
    "4",
    "-",
    "-",
    "-",
    "-",
    "2",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "11",
    "+4",
    "Містичний арканум (6 рівень)",
    "5",
    "4",
    "-",
    "-",
    "-",
    "-",
    "3",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "12",
    "+4",
    "—",
    "6",
    "4",
    "-",
    "-",
    "-",
    "-",
    "3",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "13",
    "+5",
    "Містичний арканум (7 рівень)",
    "6",
    "4",
    "-",
    "-",
    "-",
    "-",
    "3",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "14",
    "+5",
    "Фіча підкласу",
    "6",
    "4",
    "-",
    "-",
    "-",
    "-",
    "3",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "15",
    "+5",
    "Містичний арканум (8 рівень)",
    "7",
    "4",
    "-",
    "-",
    "-",
    "-",
    "3",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "16",
    "+5",
    "—",
    "7",
    "4",
    "-",
    "-",
    "-",
    "-",
    "3",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "17",
    "+6",
    "Містичний арканум (9 рівень)",
    "7",
    "4",
    "-",
    "-",
    "-",
    "-",
    "4",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "18",
    "+6",
    "—",
    "8",
    "4",
    "-",
    "-",
    "-",
    "-",
    "4",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "19",
    "+6",
    "—",
    "8",
    "4",
    "-",
    "-",
    "-",
    "-",
    "4",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "20",
    "+6",
    "Містичний майстер",
    "8",
    "4",
    "-",
    "-",
    "-",
    "-",
    "4",
    "-",
    "-",
    "-",
    "-",
  ],
]
`;

exports[`O44 — таблиця класу в конструкторі до виносу в спільний компонент > WIZARD_2024: заголовки й клітинки 1`] = `
[
  [
    "Рівень",
    "Бонус майстерності",
    "Фічі",
    "Магічне відновлення",
    "Підписні заклинання",
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
  ],
  [
    "1",
    "+2",
    "Чаклування, Адепт ритуалів, Магічне відновлення",
    "1",
    "—",
    "2",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "2",
    "+2",
    "Науковець",
    "1",
    "—",
    "3",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "3",
    "+2",
    "Підклас Чарівника, Фіча підкласу",
    "1",
    "—",
    "4",
    "2",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "4",
    "+2",
    "Покращення Характеристик",
    "1",
    "—",
    "4",
    "3",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "5",
    "+3",
    "Запамʼятовування заклинання",
    "1",
    "—",
    "4",
    "3",
    "2",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "6",
    "+3",
    "Фіча підкласу",
    "1",
    "—",
    "4",
    "3",
    "3",
    "-",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "7",
    "+3",
    "—",
    "1",
    "—",
    "4",
    "3",
    "3",
    "1",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "8",
    "+3",
    "—",
    "1",
    "—",
    "4",
    "3",
    "3",
    "2",
    "-",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "9",
    "+4",
    "—",
    "1",
    "—",
    "4",
    "3",
    "3",
    "3",
    "1",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "10",
    "+4",
    "Фіча підкласу",
    "1",
    "—",
    "4",
    "3",
    "3",
    "3",
    "2",
    "-",
    "-",
    "-",
    "-",
  ],
  [
    "11",
    "+4",
    "—",
    "1",
    "—",
    "4",
    "3",
    "3",
    "3",
    "2",
    "1",
    "-",
    "-",
    "-",
  ],
  [
    "12",
    "+4",
    "—",
    "1",
    "—",
    "4",
    "3",
    "3",
    "3",
    "2",
    "1",
    "-",
    "-",
    "-",
  ],
  [
    "13",
    "+5",
    "—",
    "1",
    "—",
    "4",
    "3",
    "3",
    "3",
    "2",
    "1",
    "1",
    "-",
    "-",
  ],
  [
    "14",
    "+5",
    "Фіча підкласу",
    "1",
    "—",
    "4",
    "3",
    "3",
    "3",
    "2",
    "1",
    "1",
    "-",
    "-",
  ],
  [
    "15",
    "+5",
    "—",
    "1",
    "—",
    "4",
    "3",
    "3",
    "3",
    "2",
    "1",
    "1",
    "1",
    "-",
  ],
  [
    "16",
    "+5",
    "—",
    "1",
    "—",
    "4",
    "3",
    "3",
    "3",
    "2",
    "1",
    "1",
    "1",
    "-",
  ],
  [
    "17",
    "+6",
    "—",
    "1",
    "—",
    "4",
    "3",
    "3",
    "3",
    "2",
    "1",
    "1",
    "1",
    "1",
  ],
  [
    "18",
    "+6",
    "Майстерність заклинань",
    "1",
    "—",
    "4",
    "3",
    "3",
    "3",
    "3",
    "1",
    "1",
    "1",
    "1",
  ],
  [
    "19",
    "+6",
    "Епічний Дар",
    "1",
    "—",
    "4",
    "3",
    "3",
    "3",
    "3",
    "2",
    "1",
    "1",
    "1",
  ],
  [
    "20",
    "+6",
    "Підписні заклинання",
    "1",
    "2",
    "4",
    "3",
    "3",
    "3",
    "3",
    "2",
    "2",
    "1",
    "1",
  ],
]
`;
